--- a/index.html
+++ b/index.html
@@ -396,18 +396,18 @@
                             <div class="project-icon mb-3">
                                 <i class="bi bi-globe"></i>
                             </div>
-                            <h5 class="card-title">Sitio Web </h5>
+                            <h5 class="card-title">C-V Interactivo </h5>
                             <p class="card-text">
-                                Desarrollo de sitio web responsive, 
+                                Desarrollo de C-V interactivo responsive, 
                                 con diseño moderno.
                             </p>
                             <div class="tech-badges mb-3">
                                 <span class="badge tech-badge">HTML5</span>
                                 <span class="badge tech-badge">CSS3</span>
                                 <span class="badge tech-badge">JavaScript</span>
-                                <span class="badge tech-badge">Bootstrap</span>
+                               
                             </div>
-                            <a href="#" class="btn btn-custom btn-sm">
+                            <a href="https://gissellaancelmo.github.io/C/" class="btn btn-custom btn-sm">
                                 <i class="bi bi-eye me-1"></i>Ver Proyecto
                             </a>
                         </div>
