--- a/index.html
+++ b/index.html
@@ -396,18 +396,17 @@
                             <div class="project-icon mb-3">
                                 <i class="bi bi-globe"></i>
                             </div>
-                            <h5 class="card-title">C-V Interactivo </h5>
+                            <h5 class="card-title">Sistema de contactos </h5>
                             <p class="card-text">
-                                Desarrollo de C-V interactivo responsive, 
-                                con diseño moderno.
+                                Desarrollo de Sistema de Agenda de Contactos - Backend Java.
                             </p>
                             <div class="tech-badges mb-3">
-                                <span class="badge tech-badge">HTML5</span>
-                                <span class="badge tech-badge">CSS3</span>
-                                <span class="badge tech-badge">JavaScript</span>
+                                <span class="badge tech-badge">Java</span>
+                                <span class="badge tech-badge">Spring boot</span>
+                                
                                
                             </div>
-                            <a href="https://gissellaancelmo.github.io/C/" class="btn btn-custom btn-sm">
+                            <a href="https://github.com/alaingauz/Agenda-HK2/tree/main/src" class="btn btn-custom btn-sm">
                                 <i class="bi bi-eye me-1"></i>Ver Proyecto
                             </a>
                         </div>
@@ -451,9 +450,10 @@
                             </p>
                             <div class="tech-badges mb-3">
                                 <span class="badge tech-badge">HTML</span>
-                                <span class="badge tech-badge">Node.js</span>
+                                <span class="badge tech-badge">Sprig Boot</span>
                                 <span class="badge tech-badge">Java</span>
                                 <span class="badge tech-badge">JavaScript</span>
+
                             </div>
                             <a href="https://luisalzrgcia.github.io/ClickNSweet/" class="btn btn-custom btn-sm">
                                 <i class="bi bi-eye me-1"></i>Ver Proyecto
